--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -280,6 +280,49 @@ form label.frm_primary_label input{font-size:12px;}
 	margin-top:10px;
 }
 
+.update-nag.frm-update-to-pro{
+	display:block;
+	text-align:center;
+	border:1px solid #EE4210;
+	border-radius:4px;
+	background:#EF7E59;
+	color:#fff;
+	font-size:19px;
+	line-height:2.1em;
+	margin-top:30px;
+}
+
+.update-nag.frm-update-to-pro span{
+	font-weight:100;
+}
+
+.update-nag.frm-update-to-pro a{
+	color:#fff;
+	font-size:18px;
+	height:auto;
+	margin:0 15px;
+	background-color:#d55a1e;
+	box-shadow: 0 1px 0 #BB3E01;
+	border-color:transparent;
+	padding:7px 15px;
+}
+
+.update-nag.frm-update-to-pro a:hover{
+	background-color:#d55a1e;
+	color:#fff;
+	border:1px solid #BB3E01;
+}
+
+.frm_pro_heading{
+	position:absolute;
+	left:285px;
+	line-height: 2.3em !important;
+}
+
+.upgrade_to_pro .frm_check_icon{
+	color:#468847;
+}
+
 .widefat.frm_pricing thead th,
 .widefat.frm_pricing td{
 	text-align:center;
@@ -320,9 +363,27 @@ form label.frm_primary_label input{font-size:12px;}
 	color:#666;
 }
 
+.frm_pro_tip a,
 .frm_pro_tip span,
 .frm_pro_tip .frm_check1_icon{
-	color:#0073aa;
+	color:#EF7E59;
+}
+
+.frm_pro_tip .frm_check1_icon{
+	vertical-align: middle;
+}
+
+.frm_pro_tip{
+	border:1px solid #EF7E59;
+	display:block;
+	padding:2px 5px 0;
+	background:#FBF0EC;
+	border-radius:4px;
+	text-align:center;
+}
+
+.frm_field_list .frm_pro_tip{
+	margin-top:-14px;
 }
 
 .nav-tab-wrapper .frm_pro_tip{
@@ -334,7 +395,7 @@ form label.frm_primary_label input{font-size:12px;}
 }
 
 .frm_pro_tip:hover span{
-	color:#00a0d2;
+	color:#F0430E;
 }
 
 /*Switch form dropdown*/
