--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -250,7 +250,8 @@ form label.frm_primary_label input{font-size:12px;}
 .with_frm_style form .frm_blank_field input,
 .with_frm_style form .frm_blank_field textarea,
 .with_frm_style form .frm_blank_field select,
-.with_frm_style form .frm_blank_field .frm-g-recaptcha iframe{
+.with_frm_style form .frm_blank_field .frm-g-recaptcha iframe,
+.with_frm_style form .frm_blank_field .g-recaptcha iframe{
 	border-color:#B94A48;
 }
 .with_frm_style form .frm_blank_field label{color:#B94A48;}
@@ -604,6 +605,14 @@ form label.frm_primary_label input{font-size:12px;}
     position:static;
 }
 .frm_form_fields div.star a, .frm_form_fields div.star a:hover, .frm_form_fields div.star a:visited{position:static;right:auto;}
+
+.edit_field_type_file ~ .edit_field_type_break .frm_hidden.frm_pro_tip{
+	display:block;
+	color:red;
+	border-color:red;
+	background-color: transparent;
+	margin-top:10px;
+}
 
 .frm_ext_sc{display:none;}
 .frm_long_input{width:95% !important;}
